# routes/api.php
@@ -7,6 +7,9 @@ use Illuminate\Support\Facades\Route;
 
 Route::apiResource('/users', UserController::class);
 
+Route::post('/otp', [OtpController::class, 'sendOtp']);
+Route::post('/verify-otp', [OtpController::class, 'verifyOtp']);
+
 Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
